--- a/euro/static/euro/style.css
+++ b/euro/static/euro/style.css
@@ -42,9 +42,16 @@ h1, h2, h3, h4 {
 .save {
     float: right;
 }
-tr:stripped {
-    nth-child(even) {background-color: #f2f2f2}
+
+#classement th {
+    background-color: #4CAF50;
+    color: white;
 }
+
+#classement tr:nth-child(even) {background-color: #f2f2f2}
+
+#classement tr:hover {background-color: #ddd;}
+
 .popup {
     background-color: #ffefaa;   
 }
