--- a/euro/templates/euro/index.html
+++ b/euro/templates/euro/index.html
@@ -38,7 +38,9 @@
                     <input class="score entry" type="number" id="score_{{rencontre.id}}_2" min="0" value="{{pronostics|score2:rencontre}}" {% if rencontre.passed %}disabled{% endif %}/>
                     {% endif %}
                     
-                    
+                    {% if rencontre.passed %}
+                        {{rencontre.resultat}}
+                    {% endif %}
                     
                     
                     
