--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -6,12 +6,12 @@
 <head>
     <title>Euro 2016</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap-theme.min.css' %}">
+    <link rel='stylesheet prefetch' href="{% static 'euro/vendor/font-awesome.min.css' %}">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{% static 'euro/vendor/jquery.min.js' %}"></script>
+    <script src="{% static 'euro/vendor/bootstrap.min.js' %}"></script>
 
     <link rel="stylesheet" type="text/css" href="{% static 'euro/style.css' %}" />
     <script src="{% static 'euro/loginform.js' %}" type="text/javascript"></script>
