--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -13,6 +13,9 @@
     <script src="{% static 'euro/vendor/jquery.min.js' %}"></script>
     <script src="{% static 'euro/vendor/bootstrap.min.js' %}"></script>
 
+    <link rel='stylesheet prefetch' href="{% static 'euro/vendor/jquery.dynatable.css' %}">
+    <script src="{% static 'euro/vendor/jquery.dynatable.js' %}"></script>
+    
     <link rel="stylesheet" type="text/css" href="{% static 'euro/style.css' %}" />
     <script src="{% static 'euro/loginform.js' %}" type="text/javascript"></script>
 
