--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -39,6 +39,7 @@
                 <li class="{% active request 'euro:nexts' %}"><a href="{% url 'euro:nexts' %}">Nexts</a></li>
                 <li class="{% active request 'euro:index' %}"><a href="{% url 'euro:index' %}">Events</a></li>
                 <li class="{% active request 'euro:classement' %}"><a href="{% url 'euro:classement' %}">Classement</a></li>
+                <li class="{% active request 'euro:teams' %}"><a href="{% url 'euro:teams' %}">Teams</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if username %}
