--- a/euro/templates/euro/nexts.html
+++ b/euro/templates/euro/nexts.html
@@ -29,8 +29,8 @@
                 {% for rencontre in latest_rencontre_list %} 
                 {% if rencontre.date == date %}
                         <script type="text/javascript">
-                            formSave.fields['score{{rencontre.id}}_1']= "score_{{rencontre.id}}_1"
-                            formSave.fields['score{{rencontre.id}}_2']= "score_{{rencontre.id}}_2"
+                            formSave.fields['score_{{rencontre.id}}_1']= "score_{{rencontre.id}}_1"
+                            formSave.fields['score_{{rencontre.id}}_2']= "score_{{rencontre.id}}_2"
                         </script>
                 <div class="well">
                     <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}" />
