--- a/euro/templates/euro/classement.html
+++ b/euro/templates/euro/classement.html
@@ -13,7 +13,7 @@
         </thead>
         {% for user in users %}
         <tr style="border-bottom: 1px solid #ddd;">
-            <td style="padding-left: 15px;padding-right: 15px;">{{user.username}}</td><td> {{user.score}}</td>
+            <td style="padding-left: 15px;padding-right: 15px;">{{user.user.username}}</td><td> {{user.score}}</td>
         </tr>
         {% endfor %}
     </table>
