--- a/euro/templates/euro/classement.html
+++ b/euro/templates/euro/classement.html
@@ -13,7 +13,11 @@
         </thead>
         {% for user in users %}
         <tr style="border-bottom: 1px solid #ddd;">
-            <td style="padding-left: 15px;padding-right: 15px;">{{user.user.username}}</td><td> {{user.score}}</td>
+            {% if user = self %}
+            <td><strong><span style="padding-left: 45px;padding-right: 15px;">{{user.user.username}}</span></strong></td><td><span style="padding-left: 45px;padding-right: 15px;"> {{user.score}}</span></td>
+            {% else %}
+            <td><span style="padding-left: 50px;padding-right: 15px;">{{user.user.username}}</span></td><td><span style="padding-left: 45px;padding-right: 15px;"> {{user.score}}</span></td>
+            {% endif %}
         </tr>
         {% endfor %}
     </table>
