--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -54,7 +54,7 @@
             </ul>
         </div>
     </nav>
-
+    {% if username == None %}
     <div id="myModalLogin" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
@@ -136,6 +136,7 @@
 
         </div>
     </div>
+    {% endif %}
 
 
 <form id="saveP">
