--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <title>Euro 2016</title>
-
+    <link rel="shortcut icon" type="image/png" href="{% static 'euro/images/favicon.png' %}"/>
     <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap-theme.min.css' %}">
     <link rel='stylesheet prefetch' href="{% static 'euro/vendor/font-awesome.min.css' %}">
