--- a/euro/templates/euro/home.html
+++ b/euro/templates/euro/home.html
@@ -80,9 +80,11 @@
                     <span class='pays'>{{resultat.match.pays1}}</span>
                     
                     {% if username %}
+                    {% if pronostics|winner:resultat.match == 1 %}<img class="gray" src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />{% endif %}
                     <input class="score entry" type="number"  min="0" value="{{pronostics|score1:resultat.match}}" disabled/>
                     <strong style="padding: 10px;"><big>{{resultats|score1:resultat.match}} - {{resultats|score2:resultat.match}}</big></strong>
                     <input class="score entry" type="number"  min="0" value="{{pronostics|score2:resultat.match}}" disabled/>
+                    {% if pronostics|winner:resultat.match == 2 %}<img class="gray" src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />{% endif %}
                     {% endif %}
                     
                     <span class='pays'>{{resultat.match.pays2}}</span>
