--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -138,7 +138,7 @@
     </div>
     {% endif %}
 
-
+ {% block form %}
 <form id="saveP">
     {% csrf_token %}
     <div class="main">
@@ -146,7 +146,7 @@
         {% block content %} {% endblock %}
 
     </div>
-
+{% endblock %}
 
     <nav class="navbar navbar-fixed-bottom popup">
         <div class="container-fluid popup">
