--- a/euro/templates/euro/nexts.html
+++ b/euro/templates/euro/nexts.html
@@ -35,7 +35,7 @@
                             
                         </script>
                 <div class="well">
-                    <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}" />
+                    <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}"  class="drapeau"/>
                     <span class='pays'>{{rencontre.pays1}}</span>
                     
                     {% if username %}
@@ -84,7 +84,7 @@
                     {% endif %}
                     
                     <span class='pays'>{{rencontre.pays2}}</span>
-                    <img src="{% static 'euro/flags/' %}{{rencontre.pays2.icone}}.png" alt="{{rencontre.pays2}}" /> &nbsp;
+                    <img src="{% static 'euro/flags/' %}{{rencontre.pays2.icone}}.png" alt="{{rencontre.pays2}}"  class="drapeau"/> &nbsp;
                 </div>
                 {% endif %} 
                 {% endfor %}
